se redujo codifo inutil y se arreglo un bug que generaba una columna blanca en el margen derecho en version mobile

--- a/style.css
+++ b/style.css
@@ -319,19 +319,7 @@ header {
 /* custom scroll bar */
 ::-webkit-scrollbar {
     display: none;
-    width: 10px;
 }
-::-webkit-scrollbar-track {
-    background: #bfbfbf;
-}
-::-webkit-scrollbar-thumb {
-    background: #888;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
-}
-
 /* all similar content styling codes */
 section{
     padding: 80px 0;
@@ -641,9 +629,8 @@ section .title::after{
 }
 
 .rowp {
-    content: "";
     display: table;
-    position: relative;
+    position:relative;
     clear: both;
     left: 50%;
     top: 60px;
@@ -658,13 +645,13 @@ section .title::after{
 @media screen and (max-width: 850px) {
     .columnp{
         width: 310px;
-    }
+    }   
 }
 @media screen and (max-width: 500px) {
     .rowp {
         top:110px;
-        left: 60%;
-        
+        left: 1;
+        margin-left: 20px;
     }
 }
 
